Bugfix: safe-area-inset on Firefox iOS

--- a/css/style.css
+++ b/css/style.css
@@ -158,10 +158,6 @@ a:hover {
    flex-direction: column;
 }
 
-.flex-width-1 {
-   flex: 1;
-}
-
 .divider {
    width: 100%;
    max-width: calc(1240px - var(--space-large));
@@ -182,6 +178,7 @@ html {
 }
 
 body {
+   height: 100%;
    margin: 0;
    padding: 0;
    font-family: MonaSans-body, sans-serif;
@@ -192,15 +189,51 @@ body {
    background: var(--color-background);
 }
 
-/* fallback values for older devices */
 @supports (padding-top: constant(safe-area-inset-top)) {
    body {
-     padding-top: constant(safe-area-inset-top);
-     padding-bottom: constant(safe-area-inset-bottom);
-     padding-left: constant(safe-area-inset-left);
-     padding-right: constant(safe-area-inset-right);
+     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
    }
- } 
+ }
+ 
+ @media (display-mode: fullscreen) {
+   body {
+     padding: 0;
+   }
+ }
+ 
+ @media (display-mode: standalone) {
+   body {
+     padding: 0;
+   }
+ }
+ 
+ /* Browsers which partially support CSS variables (iOS 11.0 – 11.2) */
+ @supports (padding-top: constant(safe-area-inset-top)) {
+   body {
+     --safe-area-inset-top: constant(safe-area-inset-top);
+     height: calc(100% + var(--safe-area-inset-top));
+   }
+ }
+ /* Adapted from https://medium.com/@draganeror/iphone-x-layout-features-with-css-environment-variables-d57423433dec */
+ /* Browsers which fully support CSS variables (iOS 11.2+).*/
+ @supports (padding-top: env(safe-area-inset-top)) {
+   body {
+     --safe-area-inset-top: env(safe-area-inset-top);
+     height: calc(100% + var(--safe-area-inset-top));
+   }
+ }
+ 
+ @media (display-mode: fullscreen) {
+   body {
+     height: 100%;
+   }
+ }
+ 
+ @media (display-mode: standalone) {
+   body {
+     height: 100%;
+   }
+ }
 
 .main {
    width: 100%;
